--- a/model_hierarchy_event.qmd
+++ b/model_hierarchy_event.qmd
@@ -42,9 +42,10 @@ m8.3 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff | BankType/BankName) + UBPRE
 m8.4 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff | BankType/BankName) + UBPRE524.all.log.diff + UBPRE524.group.log.diff + TDSP.log.diff.lag1 + TDSP.log.diff.lag2 ,data = estimation_data, REML = FALSE)
 m8.5 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff | BankType/BankName) + UBPRE524.group.log.diff + TDSP.log.diff + TDSP.log.diff.lag1 ,data = estimation_data, REML = FALSE)
 m8.6 <-  lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff.lag3 + UBPR3815.log.diff | BankType/BankName) + UBPRE524.group.log.diff + TDSP.log.diff.lag1 + TDSP.log.diff.lag2 + Qtr ,data = estimation_data, REML = FALSE)
-m8.7 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff | BankName/Qtr) + UBPRE524.group.log.diff + TDSP.log.diff + TDSP.log.diff.lag1 + UBPRE524.log.diff.lag1, data = estimation_data, REML = FALSE)
-m8.8 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff | BankName/Qtr) + UBPRE524.group.log.diff + TDSP.log.diff + TDSP.log.diff.lag1 + UBPRE524.log.diff.lag1+ UBPRE524.log.diff.lag4, data = estimation_data, REML = FALSE)
+m8.7 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff | BankName/Qtr) + UBPRE524.group.log.diff + TDSP.log.diff + TDSP.log.diff.lag1, data = estimation_data, REML = FALSE)
+m8.8 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff | BankName/Qtr) + UBPRE524.group.log.diff + UBPRE524.all.log.diff + TDSP.log.diff + TDSP.log.diff.lag1, data = estimation_data, REML = FALSE)
 
+#https://statisticalhorizons.com/lagged-dependent-variables/
 ```
 ```{r}
 #| warning: false
@@ -57,6 +58,8 @@ model_comparison |> as.data.frame() |> rownames_to_column(var = "Model")|>
         relocate(df:weight, .after = Model) |>
          dplyr::select(Model, df, logLik, AICc, delta, weight) |>
             rmarkdown::paged_table()  
+
+m8.9  <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff + UBPRE524.log.diff.lag1 | BankName/Qtr) + UBPRE524.group.log.diff + TDSP.log.diff + TDSP.log.diff.lag1, data = estimation_data, REML = TRUE)
 
 ```
 
@@ -81,8 +84,8 @@ Set REML to true.
 #| label: fig-plot-fit-hier
 #| fig-cap: "Fitted vs. Observed for estimation data on sub-set of firms"
 #| fig-height: 10
-top_model <- m8.7
-model_name <- "m8.7"
+top_model <- m8.8
+model_name <- "m8.8"
 augmented_data <- augment(top_model) |> 
                     mutate(Quarter = estimation_data$Quarter,
                         BankType = estimation_data$BankType) |>
